--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,34 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Inicio
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Bienvenido a iBiblioteca</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      iBiblioteca es una aplicación desarrollada con Ionic que permite gestionar una biblioteca de un centro educativo.
+      Para acceder a la biblioteca pulsa el seguiente botón:
+    </ion-card-content>
+  
+    <ion-button fill="clear" [routerLink]="['/ibiblioteca']">Biblioteca</ion-button>
+  </ion-card>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Informacion sobre el autor</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Aplicación desarrollada por Gabriel Bastías, estudiante del CET N30, Cipolletti, Río Negro, Argentina. 
+    </ion-card-content>
+  
+    <ion-button fill="clear" [routerLink]="['/autor']">Consultar Información</ion-button>
+  </ion-card>
 </ion-content>
